--- a/ProyectoBlazorJL/BlazorJL/BlazorJL.csproj
+++ b/ProyectoBlazorJL/BlazorJL/BlazorJL.csproj
@@ -22,4 +22,9 @@
     <None Include="Pages\Usuarios\Usuarios.razor" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Datos\Datos.csproj" />
+    <ProjectReference Include="..\Modelos\Modelos.csproj" />
+  </ItemGroup>
+
 </Project>
